check_output_renderer.txt
    Checking gcodekit4-designer v0.38.0-alpha (/home/thawkins/Projects/gcodekit4/crates/gcodekit4-designer)
warning: unused imports: `LineCap` and `LineJoin`
  --> crates/gcodekit4-designer/src/renderer.rs:13:81
   |
13 | use tiny_skia::{Pixmap, Transform, Paint, Color, Stroke, PathBuilder, FillRule, LineCap, LineJoin, Rect};
   |                                                                                 ^^^^^^^  ^^^^^^^^
   |
   = note: `#[warn(unused_imports)]` on by default

error[E0015]: cannot call non-const associated function `tiny_skia::Color::from_rgba8` in constants
  --> crates/gcodekit4-designer/src/renderer.rs:15:25
   |
15 | const BG_COLOR: Color = Color::from_rgba8(52, 73, 94, 255); // #34495e
   |                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: calls in constants are limited to constant functions, tuple structs and tuple variants

error[E0015]: cannot call non-const associated function `tiny_skia::Color::from_rgba8` in constants
  --> crates/gcodekit4-designer/src/renderer.rs:16:28
   |
16 | const SHAPE_COLOR: Color = Color::from_rgba8(52, 152, 219, 255); // #3498db
   |                            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: calls in constants are limited to constant functions, tuple structs and tuple variants

error[E0015]: cannot call non-const associated function `tiny_skia::Color::from_rgba8` in constants
  --> crates/gcodekit4-designer/src/renderer.rs:17:32
   |
17 | const SELECTION_COLOR: Color = Color::from_rgba8(255, 235, 59, 255); // #ffeb3b
   |                                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: calls in constants are limited to constant functions, tuple structs and tuple variants

error[E0015]: cannot call non-const associated function `tiny_skia::Color::from_rgba8` in constants
  --> crates/gcodekit4-designer/src/renderer.rs:18:32
   |
18 | const CROSSHAIR_COLOR: Color = Color::from_rgba8(255, 255, 0, 255); // Bright yellow
   |                                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: calls in constants are limited to constant functions, tuple structs and tuple variants

error[E0609]: no field `radius_x` on type `&shapes::Ellipse`
   --> crates/gcodekit4-designer/src/renderer.rs:131:44
    |
131 |                         .pre_scale(ellipse.radius_x as f32, ellipse.radius_y as f32);
    |                                            ^^^^^^^^ unknown field
    |
    = note: available fields are: `center`, `rx`, `ry`

error[E0609]: no field `radius_y` on type `&shapes::Ellipse`
   --> crates/gcodekit4-designer/src/renderer.rs:131:69
    |
131 |                         .pre_scale(ellipse.radius_x as f32, ellipse.radius_y as f32);
    |                                                                     ^^^^^^^^ unknown field
    |
    = note: available fields are: `center`, `rx`, `ry`

warning: unused variable: `id`
   --> crates/gcodekit4-designer/src/commands.rs:226:25
    |
226 |                 for (i, id) in cmd.ids.iter().enumerate() {
    |                         ^^ help: if this is intentional, prefix it with an underscore: `_id`
    |
    = note: `#[warn(unused_variables)]` on by default

warning: unused variable: `id`
   --> crates/gcodekit4-designer/src/designer_state.rs:631:21
    |
631 |                 let id = self.canvas.generate_id();
    |                     ^^ help: if this is intentional, prefix it with an underscore: `_id`

Some errors have detailed explanations: E0015, E0609.
For more information about an error, try `rustc --explain E0015`.
warning: `gcodekit4-designer` (lib) generated 3 warnings
error: could not compile `gcodekit4-designer` (lib) due to 6 previous errors; 3 warnings emitted
